# gaku

./: .gitignore  README.md  alembic.ini  build_package_linux.sh  build_package_windows.bat  main.py  mkvenv.sh  pyproject.toml  pytest.ini  requirements.txt  resources.md  static_analysis.sh
alembic/: env.py
alembic/versions/: 7504dba056a4_initial_version.py  88493b80354b_add_recent_mistakes_table.py  cba6f81e6f93_add_position_to_source_link_table.py  cf5a6a0b7749_add_indexes_to_speed_up_searches.py
docs-dev/: build_and_run.md  dev_tools.md
docs-user/: mkdocs.yml
docs-user/docs/: cards.md  index.md
docs-user/docs/use-guide/: create_wordlist.md  import_vocab.md  sources.md  test_select.md  testing.md
gaku-frontend/: .gitignore  index.html  package.json  vite.config.ts
gaku-frontend/src/: App.tsx  index.css  main.tsx
gaku-frontend/src/components/: AnswerComponent.tsx  CommonState.tsx  IMEInput.tsx  Theme.tsx  (+5 more)
resources/: resources_info.txt
src/gaku/: __init__.py  api_types.py  card_types.py  config.py  db_dictionary.py  dictionary.py  gaku_manager.py  question.py  test_session.py  utils.py
tests_backend/: __init__.py  test_answering_test.py  test_basics.py  test_data.py  test_dictionary_data_reading.py  test_fsrs.py  test_import.py  test_paging.py  test_required_answers.py  utils.py
tools/: build_package.py  check_vocab.py
vocab-text/manga/: Frieren - Book 1,  Chapter 1.txt  Ranma ½ - Book 1, Part 1.txt  Ranma ½ - Book 2, Part 4.txt
vocab-text/textbook/: Quartet 1 - Chapter 1, part 2.txt  Quartet 1 - Chapter 1.txt  Quartet 1 - Chapter 2 - kanji.txt
(+25 files in other folders)
